# remote-containers-neovim

./: Dockerfile  README.md  devcontainer.json  pyproject.toml
rc_nvim/: __main__.py
