[tool.poetry]
name = "rc-nvim"
version = "0.1.0"
description = ""
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
readme = "README.md"
packages = [{include = "rc_nvim"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
